--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>E Commerce App</title>
+    <title>Dev Corner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
